src/tests/Loader/classloader/StaticVirtualMethods/NegativeTestCases/BUILD.dsc
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.
//
// Generated by eng/bxl/port_bazel_tests.py from BUILD.bazel.
// Hand-edit only if you also remove the generator from this dir.


@@public
export const loader_classloader_StaticVirtualMethods_NegativeTestCases_ambiguousImplementationException = il_coreclr_test({
    name: "AmbiguousImplementationException",
    srcs: ["AmbiguousImplementationException.il"],
    tags: ["manual"],
});
